# reporting

./: .env.example  .env.local  .gitignore  .npmignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO_cleanup.md  ddbadmin.Dockerfile  docker-compose.yaml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  test_weasyprint.py
.aws-sam/: build.toml
.github/workflows/: biweekly-release.yml  deploy_to_prod.yml  deploy_to_staging.yml
.mex/: AGENTS.md  ROUTER.md  config.json
.mex/context/: architecture.md  auth.md  conventions.md  decisions.md  reports.md  setup.md  stack.md
.mex/patterns/: INDEX.md  add-db-query.md  add-report-endpoint.md  debug-local-startup.md  deploy.md  generate-pdf.md
app/: main.py  requirements.txt  template.yml  test_weasyprint.py  worker.py
app/auth/: __init__.py  service_key.py
app/db/: bq_db.py  form_responses_db.py  quiz_db.py  report_jobs_db.py  reports_db.py  sessions_db.py  student_quiz_reports_db.py
app/internal/: db.py
app/models/: quiz_report.py  quiz_reports.py  student_quiz_report.py  student_quiz_reports.py
app/routers/: combined_reports.py  form_responses.py  futures.py  futures_college_predictor.py  quiz_reports.py  reports.py  session_quiz_reports.py  student_quiz_reports.py
app/static/: chapter_to_links.json  style.css
app/templates/: error.html  form_responses.html  futures.html  layout.html  live_session_report.html  quiz_report.html  quiz_report_by_session_id.html  (+9 more)
docs/: combined-reports-contract.md
generate_table/: __main__.py  student_quiz_reports.py
internal/: __main__.py  student_quiz_reports.py
layers/: README.md
sample_reports/: 0hGIqwhuc0hdl7ijq3v3v5PEE9yPuuGjfktSQsigjdcRrKX6HyR6azJ9.8zk_urgMf52lCkR2@gmail.com.json  5ead282be25b3872b2000001 (1).json  9750769616_mathmajortesti-7.json
templates/: prod.yaml  staging.yaml
tools/: check_layer_structure.py  publish_weasyprint_layer.sh  test_weasyprint_layer.py
(+9 files in other folders)
