[project]
name = "avanti-reporting"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.39.3",
    "botocore>=1.39.3",
    "cachetools>=5.5.2",
    "certifi>=2025.7.9",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "dnspython>=2.7.0",
    "fastapi>=0.116.0",
    "google-api-core>=2.25.1",
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-core>=2.4.3",
    "google-cloud-firestore>=2.21.0",
    "google-crc32c>=1.7.1",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.70.0",
    "grpcio>=1.73.1",
    "grpcio-status>=1.73.1",
    "h11>=0.16.0",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "jmespath>=1.0.1",
    "mangum>=0.19.0",
    "markupsafe>=3.0.2",
    "openai>=1.99.9",
    "packaging>=25.0",
    "proto-plus>=1.26.1",
    "protobuf>=6.31.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pyee>=11.1.1",
    "pymongo>=4.13.2",
    "pyppeteer>=2.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rsa>=4.9.1",
    "s3transfer>=0.13.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.7",
    "starlette>=0.46.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
    "typing-inspection>=0.4.1",
    "urllib3>=1.26.20",
    "uvicorn>=0.35.0",
    "websockets>=10.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "appdirs>=1.4.4",
    "cfgv>=3.4.0",
    "distlib>=0.3.9",
    "filelock>=3.18.0",
    "identify>=2.6.12",
    "importlib-metadata>=8.7.0",
    "nodeenv>=1.9.1",
    "platformdirs>=4.3.8",
    "virtualenv>=20.31.2",
    "zipp>=3.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
]
